Fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,10 @@
   }
 }
 
+body {
+  overflow: hidden;
+}
+
 .view {
   height: 100vh !important;
 }
